refactor(auth): updates 'jwtService' methods